--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,10 +1,10 @@
-.btn{
+.mybtn{
     padding: 0px;
     width: 100px;
     color: #360000;
     border: none;
     border-radius: 5px;
 }
-.btn:hover{
+.mybtn:hover{
     cursor: pointer;
 }
